# lfn

./: Makefile  README.md  howto.md  install.sh  pyproject.toml  update.sh
cli/: install.txt  lfn.py
docs/: ios-shortcut-note.md
tests/: test_lfn.py
