[project]
name = "lfn"
version = "0.1.0"
description = "Life note CLI tool"
requires-python = ">=3.9"
dependencies = [
    "pytest>=8.4.2",
    "rich>=13.0.0",
    "textual>=0.63.0",
]

[project.scripts]
lfn = "lfn:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["cli/lfn.py"]
sources = ["cli"]

[tool.hatch.build.targets.sdist]
include = [
    "/cli/lfn.py",
    "/docs",
    "/install.sh",
    "/LICENSE",
    "/README.md",
    "/tests",
    "/update.sh",
]
